fix collapsing

--- a/_sass/_sensebox.scss
+++ b/_sass/_sensebox.scss
@@ -1909,6 +1909,7 @@ font-size: initial;
 .events .panel-heading {
   background-color: #4eaf4714;
   border-radius: 1rem;
+  margin-bottom: 12px;
 
   > a {
       color: black;
